Adding backend unit tests for code coverage improvement